# letterboxd-wrapped-lite

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: database.py  main.py  models.py
backend/app/routers/: health.py  ingestion.py  stats.py
backend/app/services/: rss_ingestion.py  stats_service.py  tmdb_service.py
